US2072, US2071 -> Fixed some spacing

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/_elements.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/_elements.scss
@@ -2590,17 +2590,9 @@ details .arrow {
     margin-bottom: 20px;
 }
 
-.hgroup p {
-    margin: 0;
-}
 .provider-data-warning {
     margin: 2em 0;
 }
-
-.tag {
-    
-}
-
 
 .tag-label {
     font-weight: bold;
